<resources>
    <string name="app_name">PetBuddy</string>

    <string name="pet_name">Name</string>
    <string name="pet_name_hint">Enter pet\'s name</string>
    <string name="pet_bday">Birthday</string>
    <string name="pet_bday_hint">Enter pet\'s birthday</string>
    <string name="pet_type">Pet type</string>
    <string name="pet_type_hint">Is your pet a cat, dog, bunny, etc</string>
    <string name="pet_fav_food">Favorite food</string>
    <string name="pet_fav_food_hint">Enter your pet\'s favorite food</string>
    <string name="pet_happiness_lvl">Happiness level</string>
    <string name="pet_fed">Tummy full!</string>
    <string name="pet_hungry">I\'m hungry!</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="find_petbuddy_error_format">Could not find your PetBuddy device</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="connect_device_info">"Trying to connect to your PetBuddy..."</string>
    <string name="home_wifi_info">"We need your home WiFi info so that PetBuddy can connect to the Internet:"</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registration activity -->
    <string name="regactivity_title">Register your PetBuddy:</string>
    <string name="regactivity_fname">First Name</string>
    <string name="regactivity_lname">Last Name</string>
    <string name="regactivity_email">E-mail address</string>
    <string name="regactivity_pwd">Pick a Password</string>
    <string name="regactivity_submitbtn">submit</string>

    <!-- Strings related to start activity -->
    <string name="title_tv">Let\'s get your PetBuddy all set up. When ready, hit start below</string>
    <string name="start_btn">start</string>

    <!-- Strings related to ConfirmWiFiSelectionActivity -->
    <string name="selectedWifi_str">You selected %1$s as your WiFi network, is this correct?</string>
    <string name="confirm_wifi_btn">Yes</string>
    <string name="reselect_wifi_btn">No, go back</string>
    <string name="enterWifiPwd_str">Awesome! \nEnter the password for %1$s to connect your PetBuddy to the Internet:</string>
    <string name="submit_btn">submit</string>
</resources>
